--- a/backup-monitor-zabbix/zabbix_agentd.d/userparameter_info_last_file_bkp.conf
+++ b/backup-monitor-zabbix/zabbix_agentd.d/userparameter_info_last_file_bkp.conf
@@ -1,5 +1,9 @@
 # Data Criação: 14-03-2022
 # @Marcelo Grando
+
+# Sintaxe comando
+# UserParameter=<chave_do_item>,python3 <caminho_arquivo.py> <caminho_pasta_do_backup> <extensão_ou_nome_arquivo_backup>
+
 # Backup do Fortes AC
 UserParameter=bkp_ac_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_fortes_ac Pessoal
 UserParameter=bkp_ac_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_fortes_ac Pessoal
