Update files UserParameter

--- a/backup-monitor-zabbix/zabbix_agentd.d/userparameter_info_last_file_bkp.conf
+++ b/backup-monitor-zabbix/zabbix_agentd.d/userparameter_info_last_file_bkp.conf
@@ -2,29 +2,30 @@
 # @Marcelo Grando
 
 # Sintaxe comando
-# UserParameter=<chave_do_item>,python3 <caminho_arquivo.py> <caminho_pasta_do_backup> <extensão_ou_nome_arquivo_backup>
+# UserParameter=<chave_do_item>, <caminho_arquivo.sh> <caminho_pasta_do_backup> <extensão_ou_nome_arquivo_backup>
 
+/etc/zabbix/script-python/last_file_date.sh /mnt/bkp_fortes_ponto PONTO
 # Backup do Fortes AC
-UserParameter=bkp_ac_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_fortes_ac Pessoal
-UserParameter=bkp_ac_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_fortes_ac Pessoal
-UserParameter=bkp_ac_last_file_size,python3 /etc/zabbix/script-python/last_file_size.py /mnt/bkp_fortes_ac Pessoal
+UserParameter=bkp_ac_last_file_name, /etc/zabbix/script-python/last_file_name.sh /mnt/bkp_fortes_ac Pessoal
+UserParameter=bkp_ac_last_file_date, /etc/zabbix/script-python/last_file_date.sh /mnt/bkp_fortes_ac Pessoal
+UserParameter=bkp_ac_last_file_size, /etc/zabbix/script-python/last_file_size.sh /mnt/bkp_fortes_ac Pessoal
 
 # Backup do Fortes Ponto
-UserParameter=bkp_ponto_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_fortes_ponto Ponto
-UserParameter=bkp_ponto_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_fortes_ponto Ponto
-UserParameter=bkp_ponto_last_file_size,python3 /etc/zabbix/script-python/last_file_size.py /mnt/bkp_fortes_ponto Ponto
+UserParameter=bkp_ponto_last_file_name, /etc/zabbix/script-python/last_file_name.sh /mnt/bkp_fortes_ponto Ponto
+UserParameter=bkp_ponto_last_file_date, /etc/zabbix/script-python/last_file_date.sh /mnt/bkp_fortes_ponto Ponto
+UserParameter=bkp_ponto_last_file_size, /etc/zabbix/script-python/last_file_size.sh /mnt/bkp_fortes_ponto Ponto
 
 # Backup do Fortes RH
-UserParameter=bkp_rh_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_fortes_rh .backup
-UserParameter=bkp_rh_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_fortes_rh .backup
-UserParameter=bkp_rh_last_file_size,python3 /etc/zabbix/script-python/last_file_size.py /mnt/bkp_fortes_rh .backup
+UserParameter=bkp_rh_last_file_name, /etc/zabbix/script-python/last_file_name.sh /mnt/bkp_fortes_rh .backup
+UserParameter=bkp_rh_last_file_date, /etc/zabbix/script-python/last_file_date.sh /mnt/bkp_fortes_rh .backup
+UserParameter=bkp_rh_last_file_size, /etc/zabbix/script-python/last_file_size.sh /mnt/bkp_fortes_rh .backup
 
 # Backup do SystemaH2005
-UserParameter=bkp_systema_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_systemah2005 systema
-UserParameter=bkp_systema_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_systemah2005 systema
-UserParameter=bkp_systema_last_file_size,python3 /etc/zabbix/script-python/last_file_size.py /mnt/bkp_systemah2005 systema
+UserParameter=bkp_systema_last_file_name, /etc/zabbix/script-python/last_file_name.sh /mnt/bkp_systemah2005 systema
+UserParameter=bkp_systema_last_file_date, /etc/zabbix/script-python/last_file_date.sh /mnt/bkp_systemah2005 systema
+UserParameter=bkp_systema_last_file_size, /etc/zabbix/script-python/last_file_size.sh /mnt/bkp_systemah2005 systema
 
 # Backup do Fortes WK
-UserParameter=bkp_wk_last_file_name,python3 /etc/zabbix/script-python/last_file_name.py /mnt/bkp_wk_sistemas backup
-UserParameter=bkp_wk_last_file_date,python3 /etc/zabbix/script-python/last_file_date.py /mnt/bkp_wk_sistemas backup
-UserParameter=bkp_wk_last_file_size,python3 /etc/zabbix/script-python/last_file_size.py /mnt/bkp_wk_sistemas backup
+UserParameter=bkp_wk_last_file_name, /etc/zabbix/script-python/last_file_name.sh /mnt/bkp_wk_sistemas backup
+UserParameter=bkp_wk_last_file_date, /etc/zabbix/script-python/last_file_date.sh /mnt/bkp_wk_sistemas backup
+UserParameter=bkp_wk_last_file_size, /etc/zabbix/script-python/last_file_size.sh /mnt/bkp_wk_sistemas backup
