--- a/backup-monitor-zabbix/unidades/BAL-userparameter_info_last_file_bkp.conf
+++ b/backup-monitor-zabbix/unidades/BAL-userparameter_info_last_file_bkp.conf
@@ -10,9 +10,9 @@ UserParameter=bkp_ac_last_file_date, /etc/zabbix/script/last_file_date.sh /mnt/b
 UserParameter=bkp_ac_last_file_size, /etc/zabbix/script/last_file_size.sh /mnt/bkp_fortes_ac Fortes_AC
 
 # Backup do Fortes Ponto
-UserParameter=bkp_ponto_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_ponto ponto
-UserParameter=bkp_ponto_last_file_date, /etc/zabbix/script/last_file_date.sh /mnt/bkp_fortes_ponto ponto
-UserParameter=bkp_ponto_last_file_size, /etc/zabbix/script/last_file_size.sh /mnt/bkp_fortes_ponto ponto
+UserParameter=bkp_ponto_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_ponto PONTO
+UserParameter=bkp_ponto_last_file_date, /etc/zabbix/script/last_file_date.sh /mnt/bkp_fortes_ponto PONTO
+UserParameter=bkp_ponto_last_file_size, /etc/zabbix/script/last_file_size.sh /mnt/bkp_fortes_ponto PONTO
 
 # Backup do Fortes RH
 UserParameter=bkp_rh_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_rh .backup
