--- a/backup-monitor-zabbix/unidades/CTO-userparameter_info_last_file_bkp.conf
+++ b/backup-monitor-zabbix/unidades/CTO-userparameter_info_last_file_bkp.conf
@@ -5,9 +5,9 @@
 # UserParameter=<chave_do_item>, <caminho_arquivo.sh> <caminho_pasta_do_backup> <extensão_ou_nome_arquivo_backup>
 
 # Backup do Fortes AC
-UserParameter=bkp_ac_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_ac Fortes_AC
-UserParameter=bkp_ac_last_file_date, /etc/zabbix/script/last_file_date.sh /mnt/bkp_fortes_ac Fortes_AC
-UserParameter=bkp_ac_last_file_size, /etc/zabbix/script/last_file_size.sh /mnt/bkp_fortes_ac Fortes_AC
+UserParameter=bkp_ac_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_ac AC
+UserParameter=bkp_ac_last_file_date, /etc/zabbix/script/last_file_date.sh /mnt/bkp_fortes_ac AC
+UserParameter=bkp_ac_last_file_size, /etc/zabbix/script/last_file_size.sh /mnt/bkp_fortes_ac AC
 
 # Backup do Fortes Ponto
 UserParameter=bkp_ponto_last_file_name, /etc/zabbix/script/last_file_name.sh /mnt/bkp_fortes_ponto PONTO
