--- a/zabbix-5.0/windows/zabbix_agent2.conf
+++ b/zabbix-5.0/windows/zabbix_agent2.conf
@@ -259,7 +259,7 @@ HostMetadataItem=system.hostname
 
 # Include=c:\zabbix\zabbix_agent2.userparams.conf
 # Include=c:\zabbix\zabbix_agent2.conf.d\
-# Include=c:\zabbix\zabbix_agent2.conf.d\*.conf
+Include=c:\zabbix\zabbix_agent2.conf.d\*.conf
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
