--- a/certificadoA1/SUPER_userparameter_verificarValidadeCertificadoA1.conf
+++ b/certificadoA1/SUPER_userparameter_verificarValidadeCertificadoA1.conf
@@ -1,9 +1,8 @@
-# Data Criação: 12-12-2023
+# Data Criaï¿½ï¿½o: 12-12-2023
 # @Marcelo Grando
 # Path C:\zabbix\zabbix_agent2.conf.d\userparameter_version_file_win.conf
 
 # Sintaxe comando
-# UserParameter=<chave_do_item>, <caminho_arquivo.psi> -caminhoArquivo <caminho_arquivo_exe> -chave <"version" ou "name">
-
-# Versão dos executaveis do Fortes
+# UserParameter=<chave_do_item>, <caminho_arquivo.bat> <serial number>
+# Validade do certificado A1
 UserParameter=validade_certificado_a1, C:\zabbix\script\verificarValidadeCertificadoA1.bat 337d0502ed54c4af
