--- a/certificadoA1/userparameter_certificateValidity.conf
+++ b/certificadoA1/userparameter_certificateValidity.conf
@@ -6,4 +6,4 @@
 # UserParameter=<chave_do_item>, <caminho_arquivo.bat> <serial number>
 # Validade do certificado A1
 # UserParameter=validade_certificado_a1, C:\zabbix\script\verificarValidadeCertificadoA1.bat <serial number>
-UserParameter=certificate.validity[*],powershell.exe -NoProfile -ExecutionPolicy Bypass -File "C:\zabbix\script\certificateValidity.ps1" -serialNumber "$1" -outputFormat "$2"
+UserParameter=certificate.validity[*],C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -NoProfile -ExecutionPolicy Bypass -File "C:\zabbix\script\certificateValidity.ps1" -serialNumber "$1" -outputFormat "$2"
