Ajuste no comentario em userparameter_version_file_systemah

--- a/version_apps/windows/userparameter_version_file_systemah.conf
+++ b/version_apps/windows/userparameter_version_file_systemah.conf
@@ -5,4 +5,4 @@
 # Sintaxe comando
 # UserParameter=<chave_do_item>, <caminho_arquivo.psi> -caminhoArquivo <caminho_arquivo_exe> -chave <"version" ou "name">
 
-# Versão dos executaveis do Fortes
+# Versão dos executaveis do SystemaH (A linha será adicionada pelo script create_structure_version_files.ps1)
