Update corrigir documentacao arquivos.conf

--- a/certificadoA1/userparameter_certificateValidity.conf
+++ b/certificadoA1/userparameter_certificateValidity.conf
@@ -1,9 +1,9 @@
 # Data Criacao: 12-12-2023
 # @Marcelo Grando
-# Path C:\zabbix\zabbix_agent2.conf.d\userparameter_version_file_win.conf
+# Path C:\zabbix\zabbix_agent2.conf.d\userparameter_certificateValidity.conf
 
 # Sintaxe comando
-# UserParameter=<chave_do_item>, <caminho_arquivo.bat> <serial number>
-# Validade do certificado A1
-# UserParameter=validade_certificado_a1, C:\zabbix\script\verificarValidadeCertificadoA1.bat <serial number>
+# UserParameter=<chave_do_item>[*], <linha de comando para executar arquivo do powershell
+# Validade do certificado 
+
 UserParameter=certificate.validity[*],C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -NoProfile -ExecutionPolicy Bypass -File "C:\zabbix\script\certificateValidity.ps1" -serialNumber "$1" -outputFormat "$2"
