--- a/version_apps/windows/userparameter_version_file_fortes.conf
+++ b/version_apps/windows/userparameter_version_file_fortes.conf
@@ -1,10 +1,8 @@
 # Data Criação: 12-12-2023
 # @Marcelo Grando
-# Path C:\zabbix\zabbix_agent2.conf.d\userparameter_version_file_win.conf
-
+# Path C:\zabbix\zabbix_agent2.conf.d\userparameter_version_file_fortes.conf
 # Sintaxe comando
-# UserParameter=<chave_do_item>, <caminho_arquivo.psi> -caminhoArquivo <caminho_arquivo_exe> -chave <"version" ou "name">
-
+# UserParameter=<chave_do_item>, <caminho_arquivo.exe>
 # Versão dos executaveis do Fortes
 UserParameter=version_fortes_ac, C:\zabbix\script\version_file_win.bat C:\Fortes\AC\AC.exe
 UserParameter=version_fortes_agente, C:\zabbix\script\version_file_win.bat C:\Fortes\AC\Agente\Agente.exe
