--- a/systemInfoWindows/userparameterSystemInfo.conf
+++ b/systemInfoWindows/userparameterSystemInfo.conf
@@ -4,10 +4,10 @@
 # Sintaxe comando
 # Informacoes personalizadas do SO Windows
 
-UserParameter=NomeSistema,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType NomeSistema
-UserParameter=Versao,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType Versao
-UserParameter=NumeroCompilacao,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType NumeroCompilacao
-UserParameter=Arquitetura,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType Arquitetura
-UserParameter=Fabricante,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType Fabricante
-UserParameter=IdiomaCodigo,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType IdiomaCodigo
-UserParameter=IdiomaDescricao,powershell -ExecutionPolicy Bypass -File "C:\caminho\para\o\script\system_info.ps1" -infoType IdiomaDescricao
+UserParameter=name_system,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType name_system
+UserParameter=version_system,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType version_system
+UserParameter=compilation_number,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType compilation_number
+UserParameter=architecture,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType architecture
+UserParameter=manufacturer,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType manufacturer
+UserParameter=language_code,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType language_code
+UserParameter=language_description,powershell -ExecutionPolicy Bypass -File "C:\zabbix\script\systemInfo.ps1" -infoType language_description
