--- a/zabbix-5.0/windows/zabbix_agent2.conf
+++ b/zabbix-5.0/windows/zabbix_agent2.conf
@@ -247,7 +247,7 @@ HostMetadataItem=system.hostname
 # Mandatory: no
 # Range: 1-30
 # Default:
-# Timeout=3
+Timeout=10
 
 ### Option: Include
 #	You may include individual files or all files in a directory in the configuration file.
